[workspace]
resolver = "2"
members = ["rm-core", "rm-gui"]

[workspace.package]
version = "0.1.0"
authors = ["Angry-Maid<mikita.savos.dev@gmail.com>"]

[workspace.dependencies]
log = "0.4.22"
env_logger = "0.11.6"
serde = { version = "1.0.216", features = ["derive"] }
jiff = { version = "0.1.16", features = ["serde"] }
ron = "0.8.1"
strum = { version = "0.26.3", features = ["derive"] }
anyhow = "1.0.95"
itertools = "0.14.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 2
