[package]
name = "rm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
glam = { version = "0.28.0", features = ["serde"] }
itertools = "0.13.0"
jiff = { version = "0.1.0", features = ["serde"] }
log = "0.4.21"
might_sleep = "0.2.0"
notify = "6.1.1"
regex = "1.10.5"
ron = "0.8.1"
serde = { version = "1.0.201", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
walkdir = "2.5.0"
