[package]
name = "rm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
ron.workspace = true
jiff.workspace = true
strum.workspace = true
itertools.workspace = true
might_sleep = "0.2.0"
notify = "7.0.0"
walkdir = "2.5.0"
regex = "1.11.1"
