[package]
name = "rm-gui"
version = "0.1.0"
edition = "2021"

# For built
build = "build.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rm-core = { path = "../rm-core" }
egui = "0.28.1"
eframe = "0.28.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
env_logger = "0.11.3"
anyhow = "1.0.86"
itertools = "0.13.0"

[build-dependencies]
built = { version = "0.7.2", features = ["git2"] }
