[package]
name = "rm-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
env_logger.workspace = true
serde.workspace = true
ron.workspace = true
jiff.workspace = true
strum.workspace = true
itertools.workspace = true
egui = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
rm-core = { path = "../rm-core" }